[package]
name = "token-gated-vote-contract"
version.workspace = true
authors.workspace = true
description = "Token-gated vote contract - democratic voting system with equal vote weight for all token holders."
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
